# ai-friendly-agents

./: .aiexclude  .env.dist  .gitignore  GEMINI.md  GEMINI.old.md  README.md  RICCARDO-ONLY.md  justfile
adk-prod-agents/: .gitignore  CHANGELOG.md  DEMO-zurich-24apr.md  DEMO.md  README.md  deploy-agent.sh  justfile  requirements.txt
adk-prod-agents/agents/: README.md  justfile
adk-prod-agents/agents/horseragish/: GEMINI.md  README.md  README.tpl  generate_readme.py  justfile  pyproject.toml
adk-prod-agents/agents/horseragish/common_lib/: process_docs.py  utils.py
adk-prod-agents/agents/horseragish/etc/data/sample_docs/: doc1.txt
adk-prod-agents/agents/horseragish/horseragish/: agent.py
adk-prod-agents/agents/horseragish/lib/: parsing.py  process_docs.py  rag.py  utils.py
adk-test-agents/: README.md  justfile
adk-test-agents/gemmina-adk050-uv/: errorpython.txt  justfile  pyproject.toml  requirements.txt
adk-test-agents/horseragish/: .gitignore  GEMINI.md  README.md  README.tpl  README2.md  agent.py  agent_test.py  ask_question.py  gemini-functions-optimization.md  generate_readme.py  install.sh  justfile  main.py  pyproject.toml  requirements.txt  run.sh  update_readme.sh
adk-test-agents/horseragish/common_lib/: parsing.py  rag.py  utils.py
adk-test-agents/horseragish/data/sample_docs/: red_riding_hood_on_lsd.txt
adk-test-agents/horseragish/etc/: sample-queries.yaml
adk-test-agents/horseragish/etc/prompts/: rag-template-addl-context.txt  rag-template.txt
adk-test-agents/horseragish/etc/prompts/codegen/: app2.prompt  sbrodola.sh
adk-test-agents/horseragish/horseragish/: __init__.py  agent.py
adk-test-agents/horseragish/horseragish_max/: agent.py
adk-test-agents/horseragish/horseragish_maxime/: agent.py
adk-test-agents/horseragish/horseragish_ricc/: agent.py
adk-test-agents/horseragish/maxlib/: process_docs.py
adk-test-agents/horseragish/old_stuff/: README.md  install.sh  justfile  main.py  requirements.txt  run.sh
adk-test-agents/horseragish/old_stuff/common_lib/: rag_stuff.py
adk-test-agents/horseragish/old_stuff/horseragish_ricc/: agent.py
adk-test-agents/horseragish/old_stuff/maxlib/: process_docs.py
adk-test-agents/horseragish/old_stuff/ricclib/: colors.py
adk-test-agents/horseragish/old_stuff/ricclib1/: utils.py
adk-test-agents/horseragish/ricclib/: colors.py  file_parser.py  markdown_utils.py  utils.py
adk-test-agents/horseragish/ricclib1/: parsers.py
mcp/: .gitignore  README.md  justfile
mcp-prod-agents/: README.md
mcp-test-agents/: README.md  justfile
rag/: README.md  whats-new-in-agent-development-kit-adk-v10.txt
tmp/: justfile
(+351 files in other folders)
