[project]
name = "gemmina-0.5-uv"  # Or whatever you want to call it
version = "0.1.0"
description = "My utterly pointless project (adk v0.5)" # Yeah, I said it.
dependencies = [
    "google-adk==0.5.0",
    'litellm',
    'litellm[google]',
    'litellm[google-adk]',
    'litellm[google-adk-uv]',
    'riccardo-sobenme', # this should fail for sure :)
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
