[project]
name = "horseragish" # Or whatever you want to call it
version = "0.1.0"
requires-python = ">=3.13"
description = "Max and Riccardo trying to create a MVP" # Yeah, I said it.
dependencies = [
    "google-adk==1.1.0",         # at least 1.0.0, but 1.1.0 is better
    "pdfminer-six>=20250506",
    "typer",
    "typing-extensions>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "jinja2>=3.1.6",
]

[project.scripts]
generate-readme = "generate_readme:generate_readme"
